--- a/webview/style/style.css
+++ b/webview/style/style.css
@@ -298,8 +298,8 @@ body {
 #cursor {
   display: inline-block;
   position: absolute;
-  height: calc(var(--vscode-editor-font-size) * 1.55);
-  width: calc(var(--vscode-editor-font-size) * 0.125);
+  height: calc(var(--vscode-editor-font-size) * 1.25);
+  width: calc(var(--vscode-editor-font-size) * 0.15);
   opacity: 1;
   top: 0;
   -webkit-animation: cursor 0.85s infinite ease-in;
@@ -346,7 +346,6 @@ pre[class*="language-"] {
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.5;
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
